...
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="30dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textUserNumber"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:text="@{fragment.getUserNumber()}"
                            android:textColor="@android:color/white"
                            android:textSize="20sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                        <ImageButton
                            android:id="@+id/imageShowUserNumber"
                            app:srcCompat="@drawable/ic_eye_lookup_cross_out"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />
                    </LinearLayout>
...
                            android:textColor="@color/white"
                            android:textSize="10sp"
                            app:layout_constraintTop_toTopOf="parent"
                            tools:ignore="MissingConstraints" />

                        <TextView
                            android:id="@+id/textUserName"
                            android:text="@{viewModel.fullUserName}"
                            app:layout_constraintStart_toStartOf="@id/textViewHolderName"
                            app:layout_constraintTop_toBottomOf="@+id/textViewHolderName"
                            android:layout_width="0dp"
                            android:layout_height="match_parent"
                            android:textColor="@android:color/white"
...
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="9dp"
                            android:text="@string/account_name"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/editTextUserFirstName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:background="@drawable/field_background"
                            android:ems="10"
                            android:fontFamily="@font/poppins_medium"
...
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="9dp"
                            android:text="@string/account_phone_number"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/editTextUserPhoneNumber"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:background="@drawable/field_background"
                            android:ems="10"
                            android:fontFamily="@font/poppins_medium"
...
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="9dp"
                            android:text="@string/account_email"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/editTextUserEmail"
                            android:text="@{viewModel.user.user.email}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:background="@drawable/field_background"
                            android:ems="10"
...
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="9dp"
                            android:text="@string/account_home_address"
                            android:textColor="@color/white" />

                        <EditText
                            android:id="@+id/editTextUserHomeAddress"
                            android:text="@{viewModel.user.user.homeAddress}"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:autofillHints=""
                            android:background="@drawable/field_background"
                            android:ems="10"
...
