...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:orientation="vertical">

        <androidx.core.widget.NestedScrollView
            android:id="@+id/success_block"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/app_name"
            tools:ignore="UselessParent">

            <LinearLayout
...
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/border_btn_send"
                        android:orientation="vertical"
                        android:padding="10dp">

                        <TextView
                            android:id="@+id/textDetailName"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="5dp"
                            android:text="TextView"
                            android:textColor="@color/white"
                            android:textSize="14sp"
                            android:textStyle="bold"
                            tools:ignore="HardcodedText" />

                        <TextView
                            android:id="@+id/texDetailNumberCard"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="TextView"
                            android:textColor="@color/white"
                            android:textSize="12sp"
                            tools:ignore="HardcodedText" />
...
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:background="@drawable/border_btn_send"
                    android:padding="10dp">

                    <TextView
                        android:id="@+id/textDetailSum"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="4dp"
                        android:fontFamily="@font/poppins_medium"
                        android:paddingBottom="10dp"
                        android:text="$ 20"
...
                        app:layout_constraintVertical_bias="0.0"
                        tools:ignore="MissingConstraints"
                        tools:layout_editor_absoluteX="0dp" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <Button
                    android:id="@+id/buttonDone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/border_done_btn"
                    android:backgroundTint="@color/blue_bg"
                    android:text="@string/btn_done"
                    android:textColor="@color/white"
...
