...
                app:fontFamily="@font/poppins_medium"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tabLayoutTransfer"
                tools:ignore="MissingConstraints" />

            <ImageButton
                android:id="@+id/button_add_person"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:background="@android:color/transparent"
                android:onClick="@{() -> fragment.clickToPayment()}"
                android:paddingRight="15dp"
...
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView7"
                tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/personRecyclerView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/button_add_person"
...
                app:fontFamily="@font/poppins_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button_add_person" />

            <EditText
                android:id="@+id/editTextSum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/hint_color"
                android:ems="10"
                android:hint="$0.00"
                android:inputType="numberDecimal"
...
                android:layout_marginTop="8dp"
                android:layout_marginBottom="24dp"
                android:text="@string/purpose_txt"
                android:textColor="@color/txt_color_4"
                android:textSize="18sp"
                app:fontFamily="@font/poppins_medium"
                app:layout_constraintBottom_toTopOf="@+id/button_send"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextSum" />

            <Spinner
                android:id="@+id/spinner_purpose"
...
                app:backgroundTint="@color/block_color_1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_purpose" />

            <TextView
                android:id="@+id/text_user_field"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/side_margin"
                android:text="@{viewModel.recipient}"
                android:textColor="@color/white"
                android:textSize="20sp"
...
